# Fit-tracker

./: .gitignore  README.md
FitTracker/: CMakeLists.txt
FitTracker/Diagrams/: Component diagram.drawio
FitTracker/Docs/Diagrams/: Component diagram.drawio  Core_class_diagram.drawio  Domain_class_diagram.drawio  Диаграмма требований.drawio
FitTracker/Docs/Documentation/: OverviewDocumentation.md
FitTracker/FitTracker/: ApplicationMediator.cpp  ApplicationMediator.h  main.cpp
FitTracker/FitTracker/Core/: CMakeLists.txt
FitTracker/FitTracker/Core/Includes/Core/: ProjectDirector.h  TableModel.h
FitTracker/FitTracker/Core/Includes/Core/Models/: DayModel.h  FoodListModel.h  FoodModel.h  MealListModel.h  MealModel.h  WeekListModel.h
FitTracker/FitTracker/Core/Includes/Core/Repositories/: DayRepository.h
FitTracker/FitTracker/Core/SourceFiles/: ProjectDirector.cpp  TableModel.cpp
FitTracker/FitTracker/Core/SourceFiles/Models/: DayModel.cpp  FoodListModel.cpp  FoodModel.cpp  MealListModel.cpp  MealModel.cpp  WeekListModel.cpp
FitTracker/FitTracker/Core/SourceFiles/Repositories/: DayRepository.cpp
FitTracker/FitTracker/Domain/: CMakeLists.txt
FitTracker/FitTracker/Domain/Includes/Domain/: BodyMeasurements.h  Day.h  FoodAttributes.h  IFood.h  Meal.h  RecipeAttributes.h  RecipeFood.h  SimpleFood.h  SummaryNutrients.h
FitTracker/FitTracker/Domain/SourceFiles/: BodyMeasurements.cpp  Day.cpp  FoodAttributes.cpp  Meal.cpp  RecipeAttributes.cpp  RecipeFood.cpp  SimpleFood.cpp  SummaryNutrients.cpp
FitTracker/FitTracker/Service/: CMakeLists.txt
FitTracker/FitTracker/UI/: CMakeLists.txt  Main.qml  TableDelegate.qml
FitTracker/FitTracker/UI/Includes/UI/: MainPageViewModel.h
FitTracker/FitTracker/UI/QML/: Main.qml  MainPage.qml  WeightPage.qml
FitTracker/FitTracker/UI/SourceFiles/: MainPageViewModel.cpp
